--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <ul class="price-list">
             <li class="price-item">
               <img class="price-image"
-                src="./images/standart.svg"
+                src="./images/woomen.jpg"
                 alt="standart"
                 width="375"
                 height="340"
@@ -48,7 +48,7 @@
               <h2 class="price-subtitle">Standart</h2>
               <p class="price-cost">$20/month</p>
               <p class="price-article">The connection is always st</p>
-              <p class="price-fast">Speed of 100 Mbit / s</p>
+              <p class="price-fast">Speed of <span class="price-span">100</span> Mbit / s</p>
               <p class="price-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
                 scelerisque, neque eu pulvinar elementum, mauris nibh posuere
@@ -63,11 +63,11 @@
                 ante ipsum primis in faucibus orci luctus et ultrices posuere
                 cubilia curae;
               </p>
-              <button type="button">Make a request</button>
+              <button class="price-btn type="button">Make a request</button>
             </li>
             <li class="price-item">
               <img class="price-image"
-                src="./images/smart.svg"
+                src="./images/computer.jpg"
                 alt="smart"
                 width="375"
                 height="340"
@@ -75,7 +75,7 @@
               <h2 class="price-subtitle">Smart</h2>
               <p class="price-cost">$30/month</p>
               <p class="price-article">Service without week</p>
-              <p class="price-fast">Speed of 300 Mbit / s</p>
+              <p class="price-fast">Speed of <span class="price-span">300</span> Mbit / s</p>
               <p class="price-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
                 scelerisque, neque eu pulvinar elementum, mauris nibh posuere
@@ -90,11 +90,11 @@
                 ante ipsum primis in faucibus orci luctus et ultrices posuere
                 cubilia curae;
               </p>
-              <button type="button">Make a request</button>
+              <button class="price-btn type="button">Make a request</button>
             </li>
             <li class="price-item">
               <img class="price-image"
-                src="./images/prime.svg"
+                src="./images/app.jpg"
                 alt="prime"
                 width="375"
                 height="340"
@@ -102,7 +102,7 @@
               <h2 class="price-subtitle">Prime</h2>
               <p class="price-cost">$40/month</p>
               <p class="price-article">New modern fiber optic network</p>
-              <p class="price-fast">Speed of 1000 Mbit / s</p>
+              <p class="price-fast">Speed of <span class="price-span">1000</span> Mbit / s</p>
               <p class="price-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
                 scelerisque, neque eu pulvinar elementum, mauris nibh posuere
