--- a/index.html
+++ b/index.html
@@ -169,28 +169,29 @@
       </section>
     </main>
 
-    <footer id="contact">
-      <a href="./index.html">World.Net</a>
-      <ul>
-        <li>
-          <a href="https://www.instagram.com/" target="_blank"
-            ><img src="./images/instagram.svg" alt="instagram"
-          /></a>
-        </li>
-        <li>
-          <a href="https://www.facebook.com/" target="_blank"
-            ><img src="./images/facebook.svg" alt="facebook"
-          /></a>
-        </li>
-        <li>
-          <a href="https://www.whatsapp.com/" target="_blank"
-            ><img src="./images/whatsapp.svg" alt="whatsapp"
-          /></a>
-        </li>
-      </ul>
-      <address>
-        <a href="tel:+88006549732">8 (800) 654-97-32</a>
-      </address>
+    <footer class="footer" id="contact">
+      <div class="container footer-container ">
+        <a class="footer-logo" href="./index.html">World.Net</a>
+        <ul class="footer-list">
+          <li class="footer-item">
+            <a class="footer-link" href="https://www.instagram.com/" target="_blank"
+              ><svg class="footer-icon" width="40" height="40"><use href="./images/soc-icon.svg#icon-instagram"></use></svg></a>
+          </li>
+          <li class="footer-item">
+            <a class="footer-link" href="https://www.facebook.com/" target="_blank"
+              ><svg class="footer-icon" width="40" height="40"><use href="./images/soc-icon.svg#icon-facebook"></use></svg></a>
+          </li>
+          <li class="footer-item">
+            <a class="footer-link" href="https://www.whatsapp.com/" target="_blank"
+              ><svg class="footer-icon" width="40" height="40"><use href="./images/soc-icon.svg#icon-whatsapp"></use></svg></a>
+          </li>
+        </ul>
+        <address class="footer-tel">
+          <a class="footer-tel-link" href="tel:+88006549732">8 (800) 654-97-32</a>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
+
+
